--- a/AllSkyRadar/www/allsky.html
+++ b/AllSkyRadar/www/allsky.html
@@ -8,6 +8,6 @@
     </head>
 
     <body>
-	<img src="zwo_1080p..jpg" style="border:0; position: absolute; top:0px; left:0px; overflow:hidden; width:1000px; height:1000px;z-index:1;"/>
+	<img src="zwo_1080p.jpg" style="border:0; position: absolute; top:0px; left:0px; overflow:hidden; width:1000px; height:1000px;z-index:1;"/>
     </body>
 </html>
